<resources>
    <string name="app_name">Coffees</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="coffee_item_edit_fragment_label">Coffee edit</string>
    <string name="coffee_item_list_fragment_label">Coffees list</string>
    <string name="password">password</string>
    <string name="mark">Mark:</string>
    <string name="recommended">Recommended</string>
    <string name="logout">LOGOUT</string>
    <string name="delete">DELETE</string>
</resources>