<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_login">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.coffeeloby_basicactivity.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_Login_to_ItemListFragment"
            app:destination="@id/CoffeeItemListFragment" />
    </fragment>

    <fragment
        android:id="@+id/CoffeeItemListFragment"
        android:name="com.example.coffeeloby_basicactivity.shop.components.list.CoffeeItemListFragment"
        android:label="@string/coffee_item_list_fragment_label"
        tools:layout="@layout/fragment_coffee_item_list">

        <action
            android:id="@+id/action_ItemListFragment_to_ItemEditFragment"
            app:destination="@id/CoffeeItemEditFragment" />

        <action
            android:id="@+id/action_ItemListFragment_to_Login"
            app:destination="@id/fragment_login" />
    </fragment>
    <fragment
        android:id="@+id/CoffeeItemEditFragment"
        android:name="com.example.coffeeloby_basicactivity.shop.components.edit.CoffeeItemEditFragment"
        android:label="@string/coffee_item_edit_fragment_label"
        tools:layout="@layout/fragment_coffee_item_edit">

        <action
            android:id="@+id/action_ItemEditFragment_to_ItemListFragment"
            app:destination="@id/CoffeeItemListFragment" />
    </fragment>
</navigation>